--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</script>
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
-	<script src="script.js"></script>
+	
 </head>
 
 <body id='BG'>
@@ -100,6 +100,9 @@
 
 
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+	<script src="obstacle.js"></script>
+	<script src="script.js"></script>
+	
 	<script>
 		AOS.init();
 	</script>
