--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+	
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -15,7 +16,7 @@
 	</script>
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
-	
+
 </head>
 
 <body id='BG'>
@@ -82,10 +83,44 @@
 					minima. Possimus nisi, placeat commodi saepe, libero assumenda at praesentium suscipit iste consequuntur
 					asperiores nostrum. <br>
 					PRESS SPACE TO BEGIN THE GAME
-					
+
 				</h3>
 			</div>
 		</div>
+	</div>
+
+	<!-- QUESTIONS SCREEN -->
+
+	<div id="questions" class="container-fluid">
+		<div class="row row_1 d-flex justify-content-center text-center">
+			<div class="col-10">
+				<div class="row row_1 d-flex justify-content-center">
+					<div id="question" class="col-12 d-flex justify-content-center align-items-center">
+					</div>
+					<div class="col-10 d-flex justify-content-around">
+						<div class="row row_3 d-flex justify-content-center">
+							<div class="col-3">
+								<button onclick="checkAnswerA()" id="a" type="button" class="btn btn-outline-dark btn-lg"></button>
+							</div>
+							<div class="col-3">
+								<button onclick="checkAnswerB()" id="b" type="button" class="btn btn-outline-dark btn-lg"> </button>
+							</div>
+							<div class="col-3">
+								<button onclick="checkAnswerC()" id="c" type="button" class="btn btn-outline-dark btn-lg"></button>
+							</div>
+							<div class="col-3">
+								<button onclick="checkAnswerD()" id="d" type="button" class="btn btn-outline-dark btn-lg"></button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+ <!-- LOSE GAME SCREEN -->
+	<div id="youlose" class="container-fluid">
+
 	</div>
 
 
@@ -93,16 +128,11 @@
 
 
 
-
-
-
-
-
-
-	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+	<script src="questions.js"></script>
+	<script id="elem1" src="https://unpkg.com/aos@next/dist/aos.js"></script>
 	<script src="obstacle.js"></script>
 	<script src="script.js"></script>
-	
+
 	<script>
 		AOS.init();
 	</script>
