Double Obst and Lose Screen

--- a/index.html
+++ b/index.html
@@ -120,7 +120,22 @@
 
  <!-- LOSE GAME SCREEN -->
 	<div id="youlose" class="container-fluid">
-
+		<div class="row row_3 d-flex justify-content-center">
+			<div class="col-8 game-over">
+				<div class="row row_3 d-flex justify-content-center">
+					<div class="col-12 d-flex align-items-end text-center">
+						<h1>
+							YOU LOSE!
+						</h1>
+					</div>
+					<div class="col-12 d-flex align-items-start justify-content-center">
+							<button onclick="newGame()" type="button" class="btn btn-outline-dark btn-lg">
+							<h2>RESTART GAME</h2>
+							</button>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 
 
@@ -131,6 +146,7 @@
 	<script src="questions.js"></script>
 	<script id="elem1" src="https://unpkg.com/aos@next/dist/aos.js"></script>
 	<script src="obstacle.js"></script>
+	<script src="obstacle2.js"></script>
 	<script src="script.js"></script>
 
 	<script>
