--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 </head>
 
 <body id='BG'>
-
 	<!--DARK BACKGROUND INITIAL SCREEN-->
 
 	<div id="bg-fundo">
@@ -30,10 +29,10 @@
 					data-aos-duration="2000">
 					<div id="START" class="row">
 						<div class="col-12 logo_start d-flex align-items-center justify-content-center">
-							<img src="./assets/logo.png" alt="logo">
+							<img src="./assets/batmanlogo2.gif" alt="logo">
 						</div>
 						<div class="col-12 d-flex align-items-top justify-content-center">
-							<button type="button" class="btn btn-outline-dark btn-lg start-button" onclick="startGame()">START
+							<button type="button" class="btn btn-outline-dark btn-lg start-button" onclick="startGame(); playMusic()">START
 								GAME
 							</button>
 						</div>
@@ -100,16 +99,16 @@
 					<div class="col-10 d-flex justify-content-around">
 						<div class="row row_3 d-flex justify-content-center">
 							<div class="col-3">
-								<button onclick="checkAnswerA()" id="a" type="button" class="btn btn-outline-dark btn-lg"></button>
+								<button onclick="checkAnswerA()" id="a" type="button" class="btn btn-outline-success btn-lg"></button>
 							</div>
 							<div class="col-3">
-								<button onclick="checkAnswerB()" id="b" type="button" class="btn btn-outline-dark btn-lg"> </button>
+								<button onclick="checkAnswerB()" id="b" type="button" class="btn btn-outline-success btn-lg"> </button>
 							</div>
 							<div class="col-3">
-								<button onclick="checkAnswerC()" id="c" type="button" class="btn btn-outline-dark btn-lg"></button>
+								<button onclick="checkAnswerC()" id="c" type="button" class="btn btn-outline-success btn-lg"></button>
 							</div>
 							<div class="col-3">
-								<button onclick="checkAnswerD()" id="d" type="button" class="btn btn-outline-dark btn-lg"></button>
+								<button onclick="checkAnswerD()" id="d" type="button" class="btn btn-outline-success btn-lg"></button>
 							</div>
 						</div>
 					</div>
@@ -129,7 +128,7 @@
 						</h1>
 					</div>
 					<div class="col-12 d-flex align-items-start justify-content-center">
-							<button onclick="newGame()" type="button" class="btn btn-outline-dark btn-lg">
+							<button onclick="newGame()" type="button" class="btn btn-danger btn-lg">
 							<h2>RESTART GAME</h2>
 							</button>
 					</div>
@@ -138,6 +137,26 @@
 		</div>
 	</div>
 
+	<!-- YOU WIN SCREEN -->
+
+	<div id="youwin" class="container-fluid">
+			<div class="row row_3 d-flex justify-content-center">
+				<div class="col-8 you-win">
+					<div class="row row_3 d-flex justify-content-center">
+						<div class="col-12 d-flex align-items-end text-center justify-content-center">
+							<h1>
+								YOU WIN
+							</h1>
+						</div>
+						<div class="col-12 d-flex align-items-start justify-content-center">
+								<button onclick="stopMusic(); location.reload()" type="button" class="btn btn-outline-dark btn-lg">
+								<h2>NEW GAME</h2>
+								</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
 
 
