--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 
 	<div id="riddle-dialog" class="container-fluid">
 		<div class="row row_3 d-flex justify-content-end">
-			<div class="col-4 mt-3 pt-4 pl-5 riddle-text">
+			<div class="col-4 mt-2 pt-4 pl-5 riddle-text">
 				<p>
 					I begin and have no end.
 					And i end all that begins.
 					Who am i?
 
-					Press Space
+					Press Space to continue
 				</p>
 			</div>
 		</div>
@@ -93,7 +93,7 @@
 						You have no idea of what you're up 
 						against.
 
-						Press Space
+						Press Space to continue
 					</p>
 				</div>
 			</div>
@@ -103,15 +103,22 @@
 	<div id="instruc-text" class="container-fluid">
 		<div class="row row_1 d-flex justify-content-center align-items-center">
 			<div class="col-6 d-flex justify-content-center">
-				<h3 class="instruc-text-style">
-					-> Dodge the fireballs
-					-> Collect the question marks
-					-> Answer 5 correct questions
-					-> Defeat the Riddler
+				<div class="row d-flex justify-content-center">
+					<div class="col-12 keyboard-img d-flex justify-content-center">
+						<img src="./assets/keyboard.png" alt="keyboard">
+					</div>
+					<div class="col-12 d-flex justify-content-center">
+						<h3 class="instruc-text-style">
+							-> Dodge the fireballs
+							-> Collect the question marks
+							-> Answer 5 correct questions
+							-> Defeat the Riddler
+		
+							PRESS SPACE TO BEGIN THE GAME
+						</h3>
+					</div>
 
-					PRESS SPACE TO BEGIN THE GAME
-
-				</h3>
+				</div>
 			</div>
 		</div>
 	</div>
